<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Myo Tasker Plugin</string>
    <string name="action_done">Done</string>
    <string name="title_activity_edit">Add Myo Gesture</string>
    <string name="done">Done</string>
    <string name="fist">Fist</string>
    <string name="thumb_to_pinky">Thumb-to-Pinky</string>
    <string name="wave_in">Wave In</string>
    <string name="wave_out">Wave Out</string>
    <string name="fingers_spread">Fingers Spread</string>
    <string name="must_select_pose">You must select a pose!</string>
    <string name="settings">Settings</string>
    <string name="show_toasts_summary">Disable this option to prevent Toasts when the Myo detects a new gesture</string>
    <string name="show_toasts">Show Gesture Toasts</string>
    <string name="myo_connected">Myo connected</string>
    <string name="connect_to_myo">Connect to Myo</string>
    <string name="show_myo_status_notification">Myo Status Notification</string>
    <string name="show_myo_status_notification_summary">If enabled, a notification will be shown at all times that shows the status of the Myo.</string>
    <string name="disconnected_from_myo">Disconnected from Myo</string>
    <string name="myo_attached">Myo is attached</string>
    <string name="myo_detached">Myo is detached</string>
    <string name="myo_needs_sync">Please perform the setup gesture with the Myo</string>
    <string name="last_gesture">Last gesture:</string>
    <string name="relock_time">Relock Time</string>
    <string name="relock_time_summary">The time that your Myo will detect gestures after the unlock gesture is performed</string>
    <string name="last_connected_to">Last connected to:</string>
    <string name="detached_myo">Detached Myo:</string>
    <string name="myo_tasker_plugin_welcome"><h1><b>Welcome to Myo Tasker Plugin!</b></h1>\n\nTo get started with your Myo, <b>touch your Myo to the phone and wait for the \'Myo connected\' message to appear</b>. Open up Tasker and add a new profile of the \'Event\' type. The plugin will show under the \'Plugins\' category as \'Add Myo Gesture\'.\n\n Myo gestures will only be recognized after you perform the unlock gesture (pinky-to-thumb). By default you have 5 seconds to perform your next gesture before you must use the unlock gesture again (this time is configurable in Settings.\n\n\nPlease contact the developer with any questions. Enjoy!</string>
    <string name="double_tap">Double Tap</string>
    <string name="disconnect">Disconnect from Myo</string>
    r
    <string-array name="relock_times">
        <item>1 second</item>
        <item>2 seconds</item>
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>45 seconds</item>
        <item>60 seconds</item>
    </string-array>

    <string-array name="relock_time_values">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>
</resources>
